# 3DViewer-2.0

src/: CMakeLists.txt  Makefile
src/3dview/: CMakeLists.txt  ProjectionStrategy.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/controller/: Controller.cc  Controller.h  Observer.h
src/model/: Matrix.h  Matrix_oop.cc  Matrix_oop_operators.cc  Matrix_oop_private.cc  Object.cc  Object.h
src/tests/: tests.cc
